ABSLI NSDL Pan verification update

--- a/force-app/main/default/classes/ABSLI_NSDLPANVerification.cls
+++ b/force-app/main/default/classes/ABSLI_NSDLPANVerification.cls
@@ -53,7 +53,6 @@ public with sharing class ABSLI_NSDLPANVerification {
             panInputWrapper.dob =  dobDateTime.Format('dd/MM/yyyy');
             panInputWrapper.fathername = '';
             panRequest.inputData = new List<PANInputWrapper>{panInputWrapper};
-            system.debug('panRequest---->'+panRequest);
             ABCL_IntegrationCallout.IntegrationResponseWrapper nsdlResponse = ABCL_IntegrationCallout.executeCallout(ABSLI_Constants.PAN_VERIFICATION_INTEGRATION_METADATA,
                                                                                                                     JSON.serialize(panRequest),
                                                                                                                     null);
@@ -77,6 +76,12 @@ public with sharing class ABSLI_NSDLPANVerification {
             }else{
                 status = ABHFL_Constants.FAILURE;
             }
+
+            ABCL_IntegrationCommonUtility.caseIntegrationLogger(caseId,
+                JSON.serialize(panRequest),
+                nsdlResponse.responseBody,
+                /*intExtId*/'',
+                status);
 
             return panResponseWrapper;
         } catch (Exception e) {
