--- a/force-app/main/default/classes/ABSLI_AttendedIGMSComplaint_Test.cls
+++ b/force-app/main/default/classes/ABSLI_AttendedIGMSComplaint_Test.cls
@@ -140,6 +140,13 @@ public class ABSLI_AttendedIGMSComplaint_Test {
             	ABSLI_Case_Detail__r.Acknowledged_Date__c,
             	ABSLI_Case_Detail__r.Escalated_Date__c,
             	ABSLI_Case_Detail__r.Resolved_Date__c,
+            	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
 				Technical_Source__c,
             	Is_STP__c,
             	IGMS_Complaint_Type_Code__c,
@@ -181,7 +188,15 @@ public class ABSLI_AttendedIGMSComplaint_Test {
             	ABSLI_Case_Detail__r.IGMS_Source_of_Complaint__c,
 				ABSLI_Case_Detail__r.Email_Id__c,
             	ABSLI_Case_Detail__r.Resolved_settled_status__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Resolved_Date__c,
+            	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
             	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	IGMS_Complaint_Type_Code__c,
 				Technical_Source__c,
             	Is_STP__c,
 				Business_Unit__c,
@@ -221,6 +236,13 @@ public class ABSLI_AttendedIGMSComplaint_Test {
             	ABSLI_Case_Detail__r.Acknowledged_Date__c,
             	ABSLI_Case_Detail__r.Escalated_Date__c,
             	ABSLI_Case_Detail__r.Resolved_Date__c,
+            	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
 				Technical_Source__c,
             	Is_STP__c,
             	IGMS_Complaint_Type_Code__c,
@@ -264,6 +286,9 @@ public class ABSLI_AttendedIGMSComplaint_Test {
 				ABSLI_Case_Detail__r.Email_Id__c,
             	ABSLI_Case_Detail__r.Resolved_settled_status__c,
             	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	IGMS_Complaint_Type_Code__c,
 				Technical_Source__c,
             	Is_STP__c,
             	Stage__c,
