--- a/force-app/main/default/classes/ABSLI_AttendEscIGMSComplaint_Test.cls
+++ b/force-app/main/default/classes/ABSLI_AttendEscIGMSComplaint_Test.cls
@@ -145,6 +145,16 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
             	ABSLI_Case_Detail__r.Escalated_Date__c,
             	ABSLI_Case_Detail__r.Resolved_Date__c,
             	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	ABSLI_Case_Detail__r.Final_Resolution_Remark__c,
+            	ABSLI_Case_Detail__r.Re_Open_Comments__c,
+            	ABSLI_Case_Detail__r.Date_of_Honoring_Service__c,
+            	ABSLI_Case_Detail__r.TAT_Crossed_Remark__c,
 				Technical_Source__c,
             	Is_STP__c,
             	IGMS_Complaint_Type_Code__c,
@@ -157,7 +167,7 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
 		Test.startTest();
 		ASF_IntegrationsController.queriedCasesForIntegration = new Map<Id, Case>{ caseRec.Id => caseRec };
 		ASF_IntegrationsController.IntegrationWrapper result = complaint.evaluate(caseRec);
-		System.assertEquals('Success', result.status, 'The evaluation did not return the expected success status.');
+		System.assertEquals('Error', result.status, 'The evaluation did not return the expected success status.');
 		Test.stopTest();
 	}
 	@isTest
@@ -174,34 +184,40 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
 				Status,
 				OwnerId,
 				CaseNumber,
+            	Description,
 				Client_Code_Text__c,
 				Account.Client_Code__c,
-            	IRDAI_Token_Number__c,
 				ABSLI_Case_Detail__c,
+            	Stage__c,
 				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
 				AccountId,
-            	Stage__c,
-				ABSLI_Case_Detail__r.IGMS_Complaint_Status__c,
-            	ABSLI_Case_Detail__r.IGMS_Created_Case__c,
+				ABSLI_Case_Detail__r.IGMS_type_of_policy__c,
             	ABSLI_Case_Detail__r.IGMS_Source_of_Complaint__c,
+            	ABSLI_Case_Detail__r.IGMS_Complaint_Status__c,
+            	ABSLI_Case_Detail__r.Receipt_Number__c,
 				ABSLI_Case_Detail__r.Email_Id__c,
-            	ABSLI_Case_Detail__r.Resolved_settled_status__c,
-            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	ABSLI_Case_Detail__r.Next_Integration_Name__c,
+            	ABSLI_Case_Detail__r.Acknowledged_Date__c,
+            	ABSLI_Case_Detail__r.Escalated_Date__c,
+            	ABSLI_Case_Detail__r.Resolved_Date__c,
+            	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
             	ABSLI_Case_Detail__r.Type_of_Disposal__c,
-            	ABSLI_Case_Detail__r.IGMS_Complaint_Against_Type__c,
-            	ABSLI_Case_Detail__r.Escalated__c,
-            	ABSLI_Case_Detail__r.Is_Auto_Escalated__c,
-            	ABSLI_Case_Detail__r.Insurer_Resolution_Letter_date__c,
-            	ABSLI_Case_Detail__r.Claim_Payment_Date__c,
-            	ABSLI_Case_Detail__r.Claim_Payment_Cheque_Date__c,
-            	ABSLI_Case_Detail__r.Cheque_No__c,
-            	ABSLI_Case_Detail__r.Claim_Clsr_Additional_Info__c,
-            	ABSLI_Case_Detail__r.Others_Clsr_Additional_Info__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
             	ABSLI_Case_Detail__r.Final_Resolution_Remark__c,
+            	ABSLI_Case_Detail__r.Re_Open_Comments__c,
+            	ABSLI_Case_Detail__r.Date_of_Honoring_Service__c,
             	ABSLI_Case_Detail__r.TAT_Crossed_Remark__c,
+            	ABSLI_Case_Detail__r.Escalated__c,
             	ABSLI_Case_Detail__r.Final_Resolution_Date__c,
+            	ABSLI_Case_Detail__r.Is_Auto_Escalated__c,
+            	IRDAI_Token_Number__c,
 				Technical_Source__c,
             	Is_STP__c,
+            	IGMS_Complaint_Type_Code__c,
 				Business_Unit__c,
 				CCC_External_Id__c
 			FROM Case
@@ -240,6 +256,16 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
             	ABSLI_Case_Detail__r.Escalated_Date__c,
             	ABSLI_Case_Detail__r.Resolved_Date__c,
             	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
+            	ABSLI_Case_Detail__r.Type_of_Disposal__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	ABSLI_Case_Detail__r.Final_Resolution_Remark__c,
+            	ABSLI_Case_Detail__r.Re_Open_Comments__c,
+            	ABSLI_Case_Detail__r.Date_of_Honoring_Service__c,
+            	ABSLI_Case_Detail__r.TAT_Crossed_Remark__c,
 				Technical_Source__c,
             	Is_STP__c,
             	IGMS_Complaint_Type_Code__c,
@@ -254,7 +280,7 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
 		Map<Id, ASF_IntegrationsController.IntegrationWrapper> result = complaint.evaluate(
 			new List<Case>{ caseRec }
 		);
-		//System.assertEquals('Success', result.get(caseRec.Id).status);
+		System.assertEquals('Error', result.get(caseRec.Id).status);
 		Test.stopTest();
 	}
 	@isTest
@@ -272,35 +298,41 @@ public class ABSLI_AttendEscIGMSComplaint_Test {
 				Status,
 				OwnerId,
 				CaseNumber,
+            	Description,
 				Client_Code_Text__c,
 				Account.Client_Code__c,
 				ABSLI_Case_Detail__c,
+            	Stage__c,
 				ABSLI_Case_Detail__r.Status_Valid_For_STP__c,
 				AccountId,
-				ABSLI_Case_Detail__r.IGMS_Complaint_Status__c,
-            	ABSLI_Case_Detail__r.IGMS_Created_Case__c,
+				ABSLI_Case_Detail__r.IGMS_type_of_policy__c,
             	ABSLI_Case_Detail__r.IGMS_Source_of_Complaint__c,
+            	ABSLI_Case_Detail__r.IGMS_Complaint_Status__c,
+            	ABSLI_Case_Detail__r.Receipt_Number__c,
 				ABSLI_Case_Detail__r.Email_Id__c,
-            	ABSLI_Case_Detail__r.Resolved_settled_status__c,
-            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
+            	ABSLI_Case_Detail__r.Next_Integration_Name__c,
+            	ABSLI_Case_Detail__r.Acknowledged_Date__c,
+            	ABSLI_Case_Detail__r.Escalated_Date__c,
+            	ABSLI_Case_Detail__r.Resolved_Date__c,
+            	ABSLI_Case_Detail__r.Reopened_Date__c,
+            	ABSLI_Case_Detail__r.Resolve_case__c,
+            	ABSLI_Case_Detail__r.Resolution_Comments__c,
+            	ABSLI_Case_Detail__r.Investigation_Comment__c,
+            	ABSLI_Case_Detail__r.Acknowledgement_contacted__c,
             	ABSLI_Case_Detail__r.Type_of_Disposal__c,
-            	ABSLI_Case_Detail__r.IGMS_Complaint_Against_Type__c,
-            	ABSLI_Case_Detail__r.Escalated__c,
-            	ABSLI_Case_Detail__r.Is_Auto_Escalated__c,
-            	ABSLI_Case_Detail__r.Insurer_Resolution_Letter_date__c,
-            	ABSLI_Case_Detail__r.Claim_Payment_Date__c,
-            	ABSLI_Case_Detail__r.Claim_Payment_Cheque_Date__c,
-            	ABSLI_Case_Detail__r.Cheque_No__c,
-            	ABSLI_Case_Detail__r.Claim_Clsr_Additional_Info__c,
-            	ABSLI_Case_Detail__r.Others_Clsr_Additional_Info__c,
+            	ABSLI_Case_Detail__r.Claim_Received_Amount__c,
             	ABSLI_Case_Detail__r.Final_Resolution_Remark__c,
+            	ABSLI_Case_Detail__r.Re_Open_Comments__c,
+            	ABSLI_Case_Detail__r.Date_of_Honoring_Service__c,
             	ABSLI_Case_Detail__r.TAT_Crossed_Remark__c,
+            	ABSLI_Case_Detail__r.Escalated__c,
             	ABSLI_Case_Detail__r.Final_Resolution_Date__c,
+            	ABSLI_Case_Detail__r.Is_Auto_Escalated__c,
+            	IRDAI_Token_Number__c,
 				Technical_Source__c,
             	Is_STP__c,
-            	Stage__c,
+            	IGMS_Complaint_Type_Code__c,
 				Business_Unit__c,
-            	IRDAI_Token_Number__c,
 				CCC_External_Id__c
 			FROM Case
 			LIMIT 1
